Trying to fix overlapping issue among img

--- a/style.css
+++ b/style.css
@@ -59,21 +59,26 @@ p {
   height: fit-content;
 }
 
-/* Layer 1 need to be absolute */
-#page1 .logo-gif {
+/* All images are absolutely positioned */
+#page1 .image-container img {
   position: absolute;
   top: 0;
   left: 0;
+  width: auto;
+  height: auto;
+  max-width: none;
+  max-height: none;
+}
+
+#page1 .logo-gif {
   z-index: 1;
 }
 
 #page1 .deco-gif-1 {
-  position: relative;
   z-index: 2;
 }
 
 #page1 .deco-gif-2 {
-  position: relative;
   z-index: 3;
 }
 
